--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				<a href="#typenv" id="typenv" style="color: inherit; text-decoration: none;">
 					<h1>typenv</h1>
 				</a>
+				<p><a href="https://codecov.io/gh/mcountryman/typenv"><img src="https://codecov.io/gh/mcountryman/typenv/branch/master/graph/badge.svg" alt="codecov"></a></p>
 				<p>Typenv intends to provide .env configuration with type safety in mind.</p>
 				<a href="#installation" id="installation" style="color: inherit; text-decoration: none;">
 					<h2>Installation</h2>
