deploy: 87be9ed572045370dfc3b21d20150622d40fdfc4

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 				<a href="#typenv" id="typenv" style="color: inherit; text-decoration: none;">
 					<h1>typenv</h1>
 				</a>
-				<p><a href="https://codecov.io/gh/mcountryman/typenv"><img src="https://codecov.io/gh/mcountryman/typenv/branch/master/graph/badge.svg" alt="codecov"></a></p>
+				<p><a href="https://codecov.io/gh/mcountryman/typenv"><img src="https://codecov.io/gh/mcountryman/typenv/branch/master/graph/badge.svg" alt="codecov"></a>
+				<img src="https://github.com/mcountryman/typenv/workflows/Build/badge.svg" alt="Build"></p>
 				<p>Typenv intends to provide .env configuration with type safety in mind.</p>
 				<a href="#installation" id="installation" style="color: inherit; text-decoration: none;">
 					<h2>Installation</h2>
