--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
 	<div class="row">
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
-				<a href="#typenv" id="typenv" style="color: inherit; text-decoration: none;">
-					<h1>typenv</h1>
-				</a>
-				<p><a href="https://codecov.io/gh/mcountryman/typenv"><img src="https://codecov.io/gh/mcountryman/typenv/branch/master/graph/badge.svg" alt="codecov"></a>
-				<img src="https://github.com/mcountryman/typenv/workflows/Build/badge.svg" alt="Build"></p>
+				<h1 align="center">typenv</h1>
+				<p align="center">
+					<a href="https://codecov.io/gh/mcountryman/typenv" target="_blank">
+						<img src="https://codecov.io/gh/mcountryman/typenv/branch/master/graph/badge.svg" alt="codecov" />
+					</a>
+					<img src="https://github.com/mcountryman/typenv/workflows/Build/badge.svg" alt="build" />
+				</p>
 				<p>Typenv intends to provide .env configuration with type safety in mind.</p>
 				<a href="#installation" id="installation" style="color: inherit; text-decoration: none;">
 					<h2>Installation</h2>
