--- a/interfaces/iconfigloader.html
+++ b/interfaces/iconfigloader.html
@@ -106,7 +106,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/loader.ts#L7">loader.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loader.ts#L12">loader.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -129,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/loader.ts#L8">loader.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loader.ts#L13">loader.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -163,6 +163,9 @@
 					<li class=" tsd-kind-class tsd-has-type-parameter">
 						<a href="../classes/reflector.html" class="tsd-kind-icon">Reflector</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/valueparser.html" class="tsd-kind-icon">Value<wbr>Parser</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
@@ -188,10 +191,16 @@
 						<a href="ikeyopts.html" class="tsd-kind-icon">IKey<wbr>Opts</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="imetadata.html" class="tsd-kind-icon">IMetadata</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#loaderoptions" class="tsd-kind-icon">Loader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../globals.html#loadertype" class="tsd-kind-icon">Loader<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#comment" class="tsd-kind-icon">COMMENT</a>
