--- a/classes/reflector.html
+++ b/classes/reflector.html
@@ -129,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L35">reflector.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L35">reflector.ts:35</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -156,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">_target<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TConfig</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L39">reflector.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L39">reflector.ts:39</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +173,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L33">reflector.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L33">reflector.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">TConfig</span></h4>
@@ -193,7 +193,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L81">reflector.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L81">reflector.ts:81</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -219,7 +219,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L77">reflector.ts:77</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L77">reflector.ts:77</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="../interfaces/imetadata.html" class="tsd-signature-type">IMetadata</a><span class="tsd-signature-symbol">[]</span></h4>
@@ -236,7 +236,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L57">reflector.ts:57</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L57">reflector.ts:57</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -259,7 +259,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L42">reflector.ts:42</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L42">reflector.ts:42</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
@@ -276,7 +276,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L49">reflector.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L49">reflector.ts:49</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -349,6 +349,9 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-class">
+						<a href="valueparser.html" class="tsd-kind-icon">Value<wbr>Parser</a>
+					</li>
 					<li class=" tsd-kind-interface">
 						<a href="../interfaces/iconfigloader.html" class="tsd-kind-icon">IConfig<wbr>Loader</a>
 					</li>
@@ -362,10 +365,16 @@
 						<a href="../interfaces/ikeyopts.html" class="tsd-kind-icon">IKey<wbr>Opts</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="../interfaces/iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="../interfaces/imetadata.html" class="tsd-kind-icon">IMetadata</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#loaderoptions" class="tsd-kind-icon">Loader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../globals.html#loadertype" class="tsd-kind-icon">Loader<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#comment" class="tsd-kind-icon">COMMENT</a>
