--- a/interfaces/icustommetadata.html
+++ b/interfaces/icustommetadata.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">default<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L12">reflector.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L12">reflector.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L8">reflector.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L8">reflector.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -132,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">optional<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L17">reflector.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L17">reflector.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -162,6 +162,9 @@
 					<li class=" tsd-kind-class tsd-has-type-parameter">
 						<a href="../classes/reflector.html" class="tsd-kind-icon">Reflector</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/valueparser.html" class="tsd-kind-icon">Value<wbr>Parser</a>
+					</li>
 					<li class=" tsd-kind-interface">
 						<a href="iconfigloader.html" class="tsd-kind-icon">IConfig<wbr>Loader</a>
 					</li>
@@ -190,10 +193,16 @@
 						<a href="ikeyopts.html" class="tsd-kind-icon">IKey<wbr>Opts</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="imetadata.html" class="tsd-kind-icon">IMetadata</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#loaderoptions" class="tsd-kind-icon">Loader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../globals.html#loadertype" class="tsd-kind-icon">Loader<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#comment" class="tsd-kind-icon">COMMENT</a>
