--- a/interfaces/ikeyopts.html
+++ b/interfaces/ikeyopts.html
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">default<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/decorator.ts#L7">decorator.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/decorator.ts#L7">decorator.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/decorator.ts#L6">decorator.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/decorator.ts#L6">decorator.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">optional<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/decorator.ts#L8">decorator.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/decorator.ts#L8">decorator.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,6 +141,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-has-type-parameter">
 						<a href="../classes/reflector.html" class="tsd-kind-icon">Reflector</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/valueparser.html" class="tsd-kind-icon">Value<wbr>Parser</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="iconfigloader.html" class="tsd-kind-icon">IConfig<wbr>Loader</a>
@@ -170,10 +173,16 @@
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-interface">
+						<a href="iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="imetadata.html" class="tsd-kind-icon">IMetadata</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#loaderoptions" class="tsd-kind-icon">Loader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../globals.html#loadertype" class="tsd-kind-icon">Loader<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#comment" class="tsd-kind-icon">COMMENT</a>
