--- a/interfaces/iloaderoptions.html
+++ b/interfaces/iloaderoptions.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IDotEnvLoaderOptions | Typenv Documentation</title>
+	<title>ILoaderOptions | Typenv Documentation</title>
 	<meta name="description" content="Documentation for Typenv Documentation">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="idotenvloaderoptions.html">IDotEnvLoaderOptions</a>
+					<a href="iloaderoptions.html">ILoaderOptions</a>
 				</li>
 			</ul>
-			<h1>Interface IDotEnvLoaderOptions</h1>
+			<h1>Interface ILoaderOptions</h1>
 		</div>
 	</div>
 </header>
@@ -70,10 +70,10 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">IDotEnvLoaderOptions</span>
+						<a href="idotenvloaderoptions.html" class="tsd-signature-type">IDotEnvLoaderOptions</a>
 						<ul class="tsd-hierarchy">
 							<li>
-								<a href="iloaderoptions.html" class="tsd-signature-type">ILoaderOptions</a>
+								<span class="target">ILoaderOptions</span>
 							</li>
 						</ul>
 					</li>
@@ -86,8 +86,8 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="idotenvloaderoptions.html#required" class="tsd-kind-icon">required</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="idotenvloaderoptions.html#type" class="tsd-kind-icon">type</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited"><a href="iloaderoptions.html#required" class="tsd-kind-icon">required</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-overwrite"><a href="iloaderoptions.html#type" class="tsd-kind-icon">type</a></li>
 							</ul>
 						</section>
 					</div>
@@ -95,23 +95,25 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
 					<a name="required" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> required</h3>
 					<div class="tsd-signature tsd-kind-icon">required<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
+						<p>Inherited from <a href="idotenvloaderoptions.html">IDotEnvLoaderOptions</a>.<a href="idotenvloaderoptions.html#required">required</a></p>
 						<ul>
 							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/options.ts#L3">loaders/dotenv/options.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-overwrite">
 					<a name="type" class="tsd-anchor"></a>
 					<h3>type</h3>
-					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"dotenv"</span></div>
+					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../globals.html#loadertype" class="tsd-signature-type">LoaderType</a></div>
 					<aside class="tsd-sources">
+						<p>Overrides <a href="idotenvloaderoptions.html">IDotEnvLoaderOptions</a>.<a href="idotenvloaderoptions.html#type">type</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/options.ts#L2">loaders/dotenv/options.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loader.ts#L8">loader.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -145,27 +147,27 @@
 					<li class=" tsd-kind-interface">
 						<a href="icustommetadata.html" class="tsd-kind-icon">ICustom<wbr>Metadata</a>
 					</li>
+					<li class=" tsd-kind-interface">
+						<a href="idotenvloaderoptions.html" class="tsd-kind-icon">IDot<wbr>Env<wbr>Loader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="ikeyopts.html" class="tsd-kind-icon">IKey<wbr>Opts</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="idotenvloaderoptions.html" class="tsd-kind-icon">IDot<wbr>Env<wbr>Loader<wbr>Options</a>
+						<a href="iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="idotenvloaderoptions.html#required" class="tsd-kind-icon">required</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
+								<a href="iloaderoptions.html#required" class="tsd-kind-icon">required</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="idotenvloaderoptions.html#type" class="tsd-kind-icon">type</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-overwrite">
+								<a href="iloaderoptions.html#type" class="tsd-kind-icon">type</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface">
-						<a href="ikeyopts.html" class="tsd-kind-icon">IKey<wbr>Opts</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
-					</li>
 					<li class=" tsd-kind-interface">
 						<a href="imetadata.html" class="tsd-kind-icon">IMetadata</a>
 					</li>
