--- a/interfaces/imetadata.html
+++ b/interfaces/imetadata.html
@@ -105,7 +105,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="icustommetadata.html">ICustomMetadata</a>.<a href="icustommetadata.html#default">default</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L12">reflector.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L12">reflector.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -121,7 +121,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="icustommetadata.html">ICustomMetadata</a>.<a href="icustommetadata.html#key">key</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L8">reflector.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L8">reflector.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -137,7 +137,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="icustommetadata.html">ICustomMetadata</a>.<a href="icustommetadata.html#optional">optional</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L17">reflector.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L17">reflector.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">property<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L24">reflector.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L24">reflector.ts:24</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">property<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/277f48b/src/reflector.ts#L29">reflector.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/reflector.ts#L29">reflector.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -197,6 +197,9 @@
 					<li class=" tsd-kind-class tsd-has-type-parameter">
 						<a href="../classes/reflector.html" class="tsd-kind-icon">Reflector</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/valueparser.html" class="tsd-kind-icon">Value<wbr>Parser</a>
+					</li>
 					<li class=" tsd-kind-interface">
 						<a href="iconfigloader.html" class="tsd-kind-icon">IConfig<wbr>Loader</a>
 					</li>
@@ -208,6 +211,9 @@
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="ikeyopts.html" class="tsd-kind-icon">IKey<wbr>Opts</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="iloaderoptions.html" class="tsd-kind-icon">ILoader<wbr>Options</a>
 					</li>
 				</ul>
 				<ul class="current">
@@ -235,6 +241,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-type-alias">
 						<a href="../globals.html#loaderoptions" class="tsd-kind-icon">Loader<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../globals.html#loadertype" class="tsd-kind-icon">Loader<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#comment" class="tsd-kind-icon">COMMENT</a>
