deploy: f847c15fd03ac09a16575be122b5d5425376ba40

--- a/classes/dotenvloader.html
+++ b/classes/dotenvloader.html
@@ -108,6 +108,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="dotenvloader.html#load" class="tsd-kind-icon">load</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><a href="dotenvloader.html#loadfromvalues" class="tsd-kind-icon">load<wbr>From<wbr>Values</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="dotenvloader.html#loadsync" class="tsd-kind-icon">load<wbr>Sync</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private tsd-is-static"><a href="dotenvloader.html#getenvdirectory" class="tsd-kind-icon">get<wbr>Env<wbr>Directory</a></li>
 							</ul>
 						</section>
 					</div>
@@ -125,7 +126,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L10">loaders/dotenv/loader.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L10">loaders/dotenv/loader.ts:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -142,7 +143,7 @@
 									</ul>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> _envPath: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = join(process.cwd(), &quot;.env&quot;)</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> _envPath: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = join(DotEnvLoader.getEnvDirectory(),&quot;.env&quot;)</span></h5>
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> _envParser: <a href="dotenvparser.html" class="tsd-signature-type">DotEnvParser</a><span class="tsd-signature-symbol"> = new DotEnvParser()</span></h5>
@@ -164,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">_env<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L14">loaders/dotenv/loader.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L14">loaders/dotenv/loader.ts:14</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -182,7 +183,7 @@
 					<div class="tsd-signature tsd-kind-icon">_env<wbr>Parser<span class="tsd-signature-symbol">:</span> <a href="dotenvparser.html" class="tsd-signature-type">DotEnvParser</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L16">loaders/dotenv/loader.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L19">loaders/dotenv/loader.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -192,7 +193,7 @@
 					<div class="tsd-signature tsd-kind-icon">_env<wbr>Path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L15">loaders/dotenv/loader.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L15">loaders/dotenv/loader.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -202,7 +203,7 @@
 					<div class="tsd-signature tsd-kind-icon">_options<span class="tsd-signature-symbol">:</span> <a href="../interfaces/idotenvloaderoptions.html" class="tsd-signature-type">IDotEnvLoaderOptions</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L12">loaders/dotenv/loader.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L12">loaders/dotenv/loader.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -212,7 +213,7 @@
 					<div class="tsd-signature tsd-kind-icon">_value<wbr>Parser<span class="tsd-signature-symbol">:</span> <a href="valueparser.html" class="tsd-signature-type">ValueParser</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L17">loaders/dotenv/loader.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L20">loaders/dotenv/loader.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -229,7 +230,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L31">loaders/dotenv/loader.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L34">loaders/dotenv/loader.ts:34</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,7 +252,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L45">loaders/dotenv/loader.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L48">loaders/dotenv/loader.ts:48</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -274,7 +275,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/iconfigloader.html">IConfigLoader</a>.<a href="../interfaces/iconfigloader.html#load">load</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L20">loaders/dotenv/loader.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L23">loaders/dotenv/loader.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -297,7 +298,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L61">loaders/dotenv/loader.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L64">loaders/dotenv/loader.ts:64</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -331,7 +332,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/iconfigloader.html">IConfigLoader</a>.<a href="../interfaces/iconfigloader.html#loadsync">loadSync</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/0181419/src/loaders/dotenv/loader.ts#L24">loaders/dotenv/loader.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L27">loaders/dotenv/loader.ts:27</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -341,6 +342,29 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-private tsd-is-static">
+					<a name="getenvdirectory" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> <span class="tsd-flag ts-flagPrivate">Private</span> get<wbr>Env<wbr>Directory</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-private tsd-is-static">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Env<wbr>Directory<span class="tsd-signature-symbol">(</span>defaultPath<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/mcountryman/typenv/blob/f847c15/src/loaders/dotenv/loader.ts#L73">loaders/dotenv/loader.ts:73</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> defaultPath: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -393,6 +417,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="dotenvloader.html#loadsync" class="tsd-kind-icon">load<wbr>Sync</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-private tsd-is-static">
+								<a href="dotenvloader.html#getenvdirectory" class="tsd-kind-icon">get<wbr>Env<wbr>Directory</a>
 							</li>
 						</ul>
 					</li>
